# Instrumenter

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  dummy.cpp  example.elf  user.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/parser/: Parser.hpp  types.hpp
include/parser/elf/: ElfParser.hpp
instrumenter/: CMakeLists.txt
instrumenter/include/: ArchUtils.hpp  Breakpointer.hpp  Disassembler.hpp  Instrument.hpp
instrumenter/src/: ArchUtils.cpp  Breakpointer.cpp  Disassembler.cpp  Instrument.cpp  main.cpp
parser/: CMakeLists.txt
parser/include/: ElfParser.hpp  Parser.hpp  types.hpp
parser/src/: ElfParser.cpp  Factory.cpp  main.cpp
reader/: CMakeLists.txt
reader/include/: Reader.hpp
reader/src/: Reader.cpp  main.cpp
src/: main.cpp
src/parser/: ElfParser.cpp  Factory.cpp
